examples/test/testpolicy5233.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5233
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key42: value5
      key5: value33
      key25: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value48
      podSelector:
        matchLabels:
          key10: value5
